manifests/dev/flink/Deployment-flink-jobmanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: jobmanager
    app.kubernetes.io/instance: flink
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: flink
    app.kubernetes.io/part-of: flink
    app.kubernetes.io/version: 2.1.0
    helm.sh/chart: flink-2.0.6
  name: flink-jobmanager
  namespace: flink
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: jobmanager
      app.kubernetes.io/instance: flink
      app.kubernetes.io/name: flink
      app.kubernetes.io/part-of: flink
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: jobmanager
        app.kubernetes.io/instance: flink
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: flink
        app.kubernetes.io/part-of: flink
        app.kubernetes.io/version: 2.1.0
        helm.sh/chart: flink-2.0.6
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/component: jobmanager
                    app.kubernetes.io/instance: flink
                    app.kubernetes.io/name: flink
                topologyKey: kubernetes.io/hostname
              weight: 1
      automountServiceAccountToken: false
      containers:
        - env:
            - name: FLINK_MODE
              value: jobmanager
            - name: FLINK_CFG_JOBMANAGER_RPC_ADDRESS
              value: flink-jobmanager
            - name: FLINK_CFG_JOBMANAGER_RPC_PORT
              value: "6123"
            - name: FLINK_CFG_JOBMANAGER_RPC_BIND__PORT
              value: "6123"
            - name: FLINK_CFG_JOBMANAGER_BIND__HOST
              value: 0.0.0.0
            - name: FLINK_CFG_REST_ADDRESS
              value: flink-jobmanager
            - name: FLINK_CFG_REST_PORT
              value: "8081"
            - name: FLINK_CFG_REST_BIND__ADDRESS
              value: 0.0.0.0
            - name: FLINK_CFG_BLOB_SERVER_PORT
              value: "6124"
            - name: BITNAMI_DEBUG
              value: "false"
          image: docker.io/bitnami/flink:2.1.0-debian-12-r0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - pgrep
                - -f
                - jobmanager
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: flink-jobmanager
          ports:
            - containerPort: 6123
              name: rpc
            - containerPort: 8081
              name: http
            - containerPort: 6124
              name: blob
          readinessProbe:
            failureThreshold: 15
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: rpc
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 2Gi
              memory: 768Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 15
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: rpc
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /tmp
              name: empty-dir
              subPath: tmp-dir
            - mountPath: /opt/bitnami/flink/conf
              name: empty-dir
              subPath: app-conf-dir
            - mountPath: /opt/bitnami/flink/log
              name: empty-dir
              subPath: app-logs-dir
            - mountPath: /bitnami/flink/conf
              name: empty-dir
              subPath: app-conf-dir
      priorityClassName: ""
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      volumes:
        - emptyDir: {}
          name: empty-dir
