manifests/dev/flink/StatefulSet-flink-taskmanager.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: taskmanager
    app.kubernetes.io/instance: flink
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: flink
    app.kubernetes.io/part-of: flink
    app.kubernetes.io/version: 2.1.0
    helm.sh/chart: flink-2.0.7
  name: flink-taskmanager
  namespace: flink
spec:
  podManagementPolicy: Parallel
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: taskmanager
      app.kubernetes.io/instance: flink
      app.kubernetes.io/name: flink
      app.kubernetes.io/part-of: flink
  serviceName: flink-taskmanager-headless
  template:
    metadata:
      labels:
        app.kubernetes.io/component: taskmanager
        app.kubernetes.io/instance: flink
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: flink
        app.kubernetes.io/part-of: flink
        app.kubernetes.io/version: 2.1.0
        helm.sh/chart: flink-2.0.7
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/component: taskmanager
                    app.kubernetes.io/instance: flink
                    app.kubernetes.io/name: flink
                topologyKey: kubernetes.io/hostname
              weight: 1
      automountServiceAccountToken: false
      containers:
        - env:
            - name: MY_POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: FLINK_MODE
              value: taskmanager
            - name: FLINK_CFG_JOBMANAGER_RPC_ADDRESS
              value: flink-jobmanager
            - name: FLINK_CFG_JOBMANAGER_RPC_PORT
              value: "6123"
            - name: FLINK_CFG_JOBMANAGER_BIND__HOST
              value: 0.0.0.0
            - name: FLINK_CFG_TASKMANAGER_DATA_PORT
              value: "6121"
            - name: FLINK_CFG_TASKMANAGER_RPC_PORT
              value: "6122"
            - name: FLINK_CFG_METRICS_INTERNAL_QUERY__SERVICE_PORT
              value: "6126"
            - name: FLINK_CFG_TASKMANAGER_HOST
              value: $(MY_POD_NAME).flink-taskmanager-headless.flink.svc.cluster.local
            - name: FLINK_CFG_TASKMANAGER_BIND__HOST
              value: 0.0.0.0
            - name: BITNAMI_DEBUG
              value: "false"
          image: docker.io/bitnami/flink:2.1.0-debian-12-r1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - pgrep
                - -f
                - taskmanager
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: flink-taskmanager
          ports:
            - containerPort: 6121
              name: data
            - containerPort: 6122
              name: rpc
            - containerPort: 6126
              name: int-metrics
          readinessProbe:
            failureThreshold: 15
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: rpc
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 2Gi
              memory: 768Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 15
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: rpc
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /tmp
              name: empty-dir
              subPath: tmp-dir
            - mountPath: /opt/bitnami/flink/conf
              name: empty-dir
              subPath: app-conf-dir
            - mountPath: /opt/bitnami/flink/log
              name: empty-dir
              subPath: app-logs-dir
            - mountPath: /bitnami/flink/conf
              name: empty-dir
              subPath: app-conf-dir
      priorityClassName: ""
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      volumes:
        - emptyDir: {}
          name: empty-dir
  updateStrategy:
    type: RollingUpdate
