manifests/dev/flink/MutatingWebhookConfiguration-flink-operator-flink-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: flink/flink-operator-serving-cert
  name: flink-operator-flink-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: flink-operator-webhook-service
        namespace: flink
        path: /mutate
    failurePolicy: Fail
    name: mutationwebhook.flink.apache.org
    rules:
      - apiGroups:
          - flink.apache.org
        apiVersions:
          - '*'
        operations:
          - CREATE
          - UPDATE
        resources:
          - flinksessionjobs
          - flinkdeployments
        scope: Namespaced
    sideEffects: None
