manifests/dev/flink/ValidatingWebhookConfiguration-flink-operator-flink-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: flink/flink-operator-serving-cert
  name: flink-operator-flink-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: flink-operator-webhook-service
        namespace: flink
        path: /validate
    failurePolicy: Fail
    name: validationwebhook.flink.apache.org
    rules:
      - apiGroups:
          - flink.apache.org
        apiVersions:
          - '*'
        operations:
          - CREATE
          - UPDATE
        resources:
          - flinkdeployments
          - flinksessionjobs
          - flinkstatesnapshots
        scope: Namespaced
    sideEffects: None
